Fix overflow on visualization page

--- a/src/containers/Step4/styles.scss
+++ b/src/containers/Step4/styles.scss
@@ -6,6 +6,7 @@
   flex-direction: row;
   margin: auto;
   width: 100%;
+  overflow-x: hidden; 
 
   .exp-container {
     background-color: $explain-background-color;
